k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webuild-it
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webuild-it
  template:
    metadata:
      labels:
        app: webuild-it
    spec:
      containers:
        - name: webuild-it
          image: ghcr.io/turcan-vasile/webuild-it:sha-8ee4cce
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
