k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webuild-it
spec:
  selector:
    app: webuild-it
  ports:
    - name: http
      port: 80
      targetPort: http
