k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webuild-it
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - webuild-it.com
        - www.webuild-it.com
      secretName: webuild-it-tls
  rules:
    - host: webuild-it.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webuild-it
                port:
                  number: 80
    - host: www.webuild-it.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webuild-it
                port:
                  number: 80
